Implement full Docker containerization for single-command startup